Перешли на RussianAnalyzer